New Portfolio site

--- a/public/404.html
+++ b/public/404.html
@@ -4,9 +4,7 @@
 <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="./css/reset.css" />
@@ -16,7 +14,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Home</title>
+    <title>Contact</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
@@ -30,14 +28,14 @@
                 <div class="container">
                     <ul id="slide-out" class="sidenav show-on-medium-and-down">
                         <li class="m-0"><a href="/"><img class="circle full-width" src="./images/me.jpg" /></a></li>
-                        <li class="m-0"><a href="/portfolio">Portfolio</a></li>
+                        <li class="m-0"><a href="/">Home</a></li>
                         <li class="m-0"><a href="/contact">Contact</a></li>
                     </ul>
                     <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    
+
                     <a href="/" class="brand-logo">Celia Rizzo</a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li class="m-0"><a href="/portfolio">Portfolio</a></li>
+                        <li class="m-0"><a href="/">Home</a></li>
                         <li class="m-0"><a href="/contact">Contact</a></li>
                     </ul>
                 </div c>
@@ -45,40 +43,16 @@
         </nav>
     </div>
 
+    <h1>404 Page Not Found</h1>
 
 
 
-    <div class="parallax-container">
-        <div class="parallax"><img src="./images/cherry_blossoms_better.jpg"></div>
-    </div>
-    <div class="section white">
-        <div class="row container">
-            <h2 class="header">About Me</h2>
-            <img src="./images/me.jpg" class="small-width float-left" />
-            <p class="grey-text text-darken-3 lighten-3">Raised in Davis, CA, blah blah blah blah. Blah blah blah blah
-                blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah blah blah blah blah.
-                Blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah blah blah blah blah.
-                Blah blah blah blah blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah.
-                Blah blah blah blah blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah
-                blah blah blah blah. Blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah
-                blah blah blah blah. Blah blah blah blah blah blah blah blah blah blah blah blah. Blah blah blah blah
-                blah blah blah blah.</p>
-            <p class="grey-text text-darken-3 lighten-3">Blah blah blah blah blah blah blah blah blah blah blah blah.
-                Blah blah blah blah blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah.
-                Blah blah blah blah blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah
-                blah blah blah blah. Blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah
-                blah blah blah blah. Blah blah blah blah blah blah blah blah blah blah blah blah. Blah blah blah blah
-                blah blah blah blah.</p>
-        </div>
-    </div>
-    <div class="parallax-container">
-        <div class="parallax"><img src="./images/pink_and_sky.jpg"></div>
-    </div>
     <footer class="page-footer indigo lighten-2">
         <div class="container center-align">
             <a class="white-text" href="https://www.github.com/crizzo16" target="_blank"><i class="brand-icon fab fa-3x fa-github"></i></a>
             <a class="white-text" href="https://www.linkedin.com/in/cecilia-rizzo" target="_blank"><i class="brand-icon fab fa-3x fa-linkedin"></i></a>
-            <a class="white-text tooltipped" data-position="top" data-tooltip="My Facebook is currently deactivated. Find me as <strong>'celia.rizzo71'</strong> on Messenger."><i class="brand-icon fab fa-3x fa-facebook"></i></a>
+            <a class="white-text tooltipped" data-position="top" data-tooltip="My Facebook is currently deactivated. Find me as <strong>'celia.rizzo71'</strong> on Messenger."><i
+                    class="brand-icon fab fa-3x fa-facebook"></i></a>
         </div>
     </footer>
 
